# PlayWindow

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/play/window/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFmpeg阅读理解  JNI原理  RegisterImpl.cpp  ffmpeg解码本地视频的流程  librtmp使用流程  native-lib.cpp
app/src/main/cpp/base/: base_class.cpp  base_template.cpp  base_thread.cpp
app/src/main/cpp/include/: FFmpegCmd.h  JNIUtil.h  LocalRtmpPush.h  RtmpFlow.h  RtmpPacketQueue.h  VideoDecoder.h  VideoEncoder.h  aac_decoder.h  aac_encoder.h  binder_parse.h  camera_rtmp_push.h  h264_encoder.h
app/src/main/cpp/src/: FFmpegCmd.cpp  JNIUtil.cpp  LocalRtmpPush.cpp  RtmpFlow.cpp  RtmpPacketQueue.cpp  VideoDecoder.cpp  VideoEncoder.cpp  aac_decoder.cpp  aac_encoder.cpp  binder_parse.cpp  camera_rtmp_push.cpp  h264_encoder.cpp
app/src/main/java/com/play/bmp/: Glide中Bitmap的优化
app/src/main/java/com/play/coroutine/: CoroutineActivity.kt
app/src/main/java/com/play/http/: HTTP
app/src/main/java/com/play/window/: BaseNative.kt  CameraActivity.kt  MainActivity.kt  WindowApp.kt  WindowPlayActivity.kt  渲染框架实现细节
app/src/main/java/com/play/window/capture/: AndroidCamera.kt  AudioEncoderListener.kt  AudioNativeEncoder.kt  AudioProcess.kt  ICamera.kt  IWindow.kt  IWindowImpl.kt  VideoCreateScene.kt  VideoParse.kt  VideoPlayer.kt
app/src/main/java/com/play/window/codec/: AACEncoder.kt  H264Encoder.kt  IEncoder.kt  IEncoderDataListener.kt  MediaPacket.kt  VideoEncoder.kt  音视频问题
app/src/main/java/com/play/window/db/: UserDao.kt  UserTable.kt
app/src/main/java/com/play/window/ffmpeg/: FFmpegVideoCut.kt
app/src/main/java/com/play/window/fm/: Zygote的作用
app/src/main/java/com/play/window/model/: DisplayInfo.kt  GLRect.kt  PreviewInfo.kt
app/src/main/java/com/play/window/muxer/: RecordMedia.kt
app/src/main/java/com/play/window/render/: DrawSurface.kt  GraphProcess.kt  OutProcess.kt  Render渲染框架  RotationUtil.kt  SurfaceParam.kt  TestCode.kt  TextureProgram.kt  TransitionExecute.kt  TransitionProgram.kt  TranstionAnim.kt  UnitProcess.kt  WindowRender.kt
app/src/main/java/com/play/window/render/gles/: EGL概念  EglCore.java  EglCore2.kt  EglSurfaceBase.java  GlUtil.java  OffscreenSurface.java  WindowSurface.java
app/src/main/java/com/play/window/render/model/: GlFrameBuffer.kt  OutSurfaceParam.kt  Scene.kt  Stream.kt  SurfaceScene.kt  TextureInfo.kt  Transtion.kt
app/src/main/java/com/play/window/render/process/: OpenglUtil.kt
app/src/main/java/com/play/window/render/surface/: SceneInfo.kt
app/src/main/java/com/play/window/temp/: GLDrawableUtils.kt  GlUtils.kt  PipScene.kt  VideoDecoder.kt  VideoPlayActivity.kt
app/src/main/java/com/play/window/utils/: AacUtils.kt  ByteBufferUtils.kt  KLazy.kt  MediaConfig.kt  MuxerUtil.kt  RecordUtil.kt  Utils.java
app/src/main/res/drawable/: btn_circle_bg.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_main2.xml  activity_video_play.xml  activity_window_play.xml  func_list_item.xml
app/src/main/res/raw/: windowslice_fragment.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/play/window/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
javaLib/src/main/java/com/play/javalib/: FindLenSubString.java  MyClass.java
